--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -103,6 +103,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
 
   &:hover {
     transform: scale(1.07);
