header icons fixed & missing pagin arrows added

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -87,11 +87,11 @@
     align-items: center;
 
     svg {
-      height: 2.4rem;
-      width: 2.4rem;
+      // height: 2.4rem;
+      // width: 2.4rem;
       fill: $color-primary;
       margin-right: 0.7rem;
-      transform: translateY(-1px);
+      // transform: translateY(-1px);
     }
 
     &:focus {
