--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,5 @@
+$bp-800: 50em;
+
 .header {
   grid-area: head;
   background-color: $color-grey-light-1;
@@ -9,6 +11,10 @@
     margin-left: 4rem;
     height: 4.6rem;
     display: block;
+  }
+
+  @media only screen and (max-width: $bp-800) {
+    position: relative;
   }
 }
 
@@ -53,6 +59,34 @@
   &__btn {
     font-weight: 600;
     font-family: inherit;
+  }
+
+  @media only screen and (max-width: $bp-800) {
+    position: absolute;
+    top: 100%; // below the header
+    left: 0;
+    width: 100vw;
+    border-radius: 0;
+    padding: 1.5rem 4rem;
+    background-color: #fff;
+    z-index: 999;
+
+    &__field {
+      width: 90%;
+    }
+
+    &__btn {
+      padding: 1.5rem;
+      span {
+        display: none;
+      }
+
+      i {
+        margin-right: 0 !important;
+        width: 3rem;
+        height: 3rem;
+      }
+    }
   }
 }
 
