--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,5 @@
 $bp-800: 50em;
+$bp-500: 31.25em;
 
 .header {
   grid-area: head;
@@ -70,9 +71,14 @@ $bp-800: 50em;
     padding: 1.5rem 4rem;
     background-color: #fff;
     z-index: 999;
+    height: 9rem;
 
     &__field {
       width: 90%;
+
+      &::placeholder {
+        color: $color-grey-dark-2;
+      }
     }
 
     &__btn {
@@ -134,6 +140,21 @@ $bp-800: 50em;
 
     &:hover {
       background-color: $color-grey-light-2;
+    }
+  }
+
+  @media only screen and (max-width: $bp-500) {
+    &__btn {
+      padding: 0 2rem;
+      span {
+        display: none;
+      }
+
+      svg {
+        margin-right: 0 !important;
+        width: 2.5rem;
+        height: 2.5rem;
+      }
     }
   }
 }
