--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -2,6 +2,10 @@
   padding: 3rem 0;
   display: flex;
   flex-direction: column;
+
+  @media only screen and (max-width: $bp-800) {
+    margin-top: 9rem;
+  }
 }
 
 .results {
