--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -2,6 +2,21 @@
   padding: 3rem 0;
   display: flex;
   flex-direction: column;
+
+  @media only screen and (max-width: $bp-800) {
+    margin-top: 9rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    position: absolute;
+    z-index: 9;
+    background-color: #fff;
+    max-width: 40rem;
+    margin-top: 19rem;
+
+    overflow-y: scroll;
+    height: 100vw;
+  }
 }
 
 .results {
@@ -38,5 +53,31 @@
   .twitter-link:link,
   .twitter-link:visited {
     color: $color-grey-dark-2;
+  }
+
+  @media only screen and (max-width: $bp-500) {
+    display: none;
+  }
+}
+
+.search-button-bar {
+  display: flex;
+  flex-direction: column;
+  width: 40rem;
+}
+
+.btn--close-search {
+  display: none;
+
+  @media only screen and (max-width: $bp-small) {
+    display: block;
+    font-size: 3rem;
+    color: $color-primary;
+    border: none;
+    background-color: #fff;
+    align-self: flex-end;
+    width: 4rem;
+    height: 4rem;
+    margin-right: 2rem;
   }
 }
