--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -23,6 +23,13 @@
     border: none;
     background: none;
   }
+
+  @media only screen and (max-width: $bp-800) {
+    width: 80%;
+    height: 80%;
+    overflow-y: scroll;
+    padding: 5rem 3rem;
+  }
 }
 
 .overlay {
@@ -95,5 +102,22 @@
   &__btn {
     grid-column: 1 / -1;
     justify-self: center;
+  }
+
+  @media only screen and (max-width: $bp-800) {
+    grid-template-columns: 1fr;
+
+    &__column {
+      row-gap: 1.5rem;
+      column-gap: 1rem;
+
+      label {
+        font-size: 1.4rem;
+      }
+
+      input {
+        font-size: 1.2rem;
+      }
+    }
   }
 }
