search bar on mobile: lines shadow added

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -75,8 +75,7 @@ body {
   @media only screen and (max-width: $bp-small) {
     grid-template:
       'head' 10rem
-      'recipe' auto
-      'list' auto / 1fr;
+      'recipe' auto / 1fr;
 
     position: relative;
   }
