--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -47,6 +47,7 @@
 
     @media only screen and (max-width: $bp-medium) {
       width: auto;
+      font-size: 2rem;
 
       &::placeholder {
         color: white;
